[package]
name = "stackdriver-metrics"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.5", default-features = false, features = [ "prost", "tls", "transport", "codegen", "tls-roots" ] }
prost = "0.8"
prost-types = "0.8"
prost-derive = "0.8"
chrono = "0.4"
thiserror = "1"
gouth = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost"] }
